assets/css/style.css
:root {
    --zoom-dark: #222222;
    --zoom-secondary: #4a4a4a;
    --zoom-success: #4bc800;
    --zoom-danger: #ff0d00;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: black;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

button {
    background-color: var(--zoom-secondary);
    border: none;
    border-radius: .25rem;
    color: white;
    padding: .25rem .5rem;
    text-align: center;
    text-decoration: none;
}

img {
    width: 100%;
    display: block;
    aspect-ratio: 5/3;
    border-radius: .25rem;
}

/* Header -----------------------------> */

#site_header {
    height: 5vh;
    position: fixed;
    top: 0;
    width: 100%;
    padding: .5rem;
    text-align: end;
}

/* #region Main  */

#site_main {
    margin-top: 5vh;
    /* height: 85vh; */
    height: 90vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container {
    max-width: 1850px;
    width: 90%;
    margin: auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
    margin: -0.2rem;
}

.col {
    width: calc(100% / 7);
    padding: .4rem .2rem;
}

.single_participant {
    position: relative;
}

.participant_name {
    position: absolute;
    left: 0;
    bottom: .3rem;
    background-color: #5a5a5aa4;
    padding: .2rem .25rem;
    color: white;
    font-size: .8rem;
}

.participant_name span {
    font-size: .7rem;
}

/* #endregion Main  */

/* #region Footer  */

#site_footer {
    background-color: var(--zoom-dark);
    color: white;
    width: 100%;
    /* min-height: 10vh; */
    height: 80px;
    position: fixed;
    bottom: 0;
    padding-left: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.left_buttons {
    width: 25%;
    display: flex;
    gap: 2rem;
}

.center_buttons {
    width: 100%;
    /* flex-grow: 1; */
    display: flex;
    justify-content: center;
    gap: 1rem;
    padding-inline: 5rem;
}

.right_buttons {
    background-color: var(--zoom-secondary);
    width: 10%;
    /* height: 10vh; */
    height: 80px;
    display: flex;
    align-items: center;
    padding: 1rem;
}

.icon_button {
    display: flex;
    align-items: center;
    gap: .6rem;
}

.footer_icon i {
    font-size: 1.5rem;
}

.footer_icon {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: .5rem;
    height: 100%;
    padding: 0.5rem;
    border-radius: 0.5rem;
}

.footer_icon:hover {
    background-color: var(--zoom-secondary);
    height: 100%;
    padding: 0.5rem;
    border-radius: 0.5rem;
}

.fa-share-from-square {
    color: var(--zoom-success);
}

.end_meeting{
    width: 100%;
    text-align: center;
    color: var(--zoom-danger);
}

.icon_text, .end_meeting {
    font-size: .7rem;
}


/* #endregion Footer  */

